--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,47 +1,36 @@
-name: Deploy to Azure Container Apps (OIDC)
+name: Deploy FastAPI to Azure Container Apps
 
 on:
   push:
     branches:
       - main
 
-permissions:
-  id-token: write   # REQUIRED for OIDC
-  contents: read
-
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
-
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
+      - name: Checkout Code
+        uses: actions/checkout@v3
 
-      - name: Login to Azure using OIDC
+      - name: Log in to Azure
         uses: azure/login@v1
         with:
-          client-id: ${{ secrets.AZURE_CLIENT_ID }}
-          tenant-id: ${{ secrets.AZURE_TENANT_ID }}
-          subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
+          creds: ${{ secrets.AZURE_CREDENTIALS }}
 
-      - name: Login to Azure Container Registry
+      - name: Log in to ACR
         run: |
-          az acr login --name zemacr
+          echo ${{ secrets.REGISTRY_PASSWORD }} | docker login ${{ secrets.REGISTRY_LOGIN_SERVER }} -u ${{ secrets.REGISTRY_USERNAME }} --password-stdin
 
-      - name: Build and push Docker image
+      - name: Build and Push Docker Image
         run: |
-          IMAGE_NAME=zemmaerskgateway
-          IMAGE_TAG=${{ github.sha }}
-          ACR_LOGIN_SERVER=zemacr.azurecr.io
+          IMAGE_TAG=fastapi-aca:$(date +%s)
+          docker build -t ${{ secrets.REGISTRY_LOGIN_SERVER }}/$IMAGE_TAG .
+          docker push ${{ secrets.REGISTRY_LOGIN_SERVER }}/$IMAGE_TAG
+          echo "IMAGE_TAG=$IMAGE_TAG" >> $GITHUB_ENV
 
-          docker build -t $ACR_LOGIN_SERVER/$IMAGE_NAME:$IMAGE_TAG .
-          docker push $ACR_LOGIN_SERVER/$IMAGE_NAME:$IMAGE_TAG
-
-          echo "IMAGE=$ACR_LOGIN_SERVER/$IMAGE_NAME:$IMAGE_TAG" >> $GITHUB_ENV
-
-      - name: Deploy to Azure Container App
+      - name: Deploy to Azure Container Apps
         run: |
           az containerapp update \
-            --name zemmaerskgateway \
-            --resource-group maersk-api \
-            --image ${{ env.IMAGE }}
+            --name fastapi-aca \
+            --resource-group fastapi-aca-rg \
+            --image ${{ secrets.REGISTRY_LOGIN_SERVER }}/${{ env.IMAGE_TAG }}
