--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -23,14 +23,14 @@ jobs:
 
       - name: Build and Push Docker Image
         run: |
-          IMAGE_TAG=fastapi-aca:$(date +%s)
+          IMAGE_TAG=zemmaerskgateway:$(date +%s)
           docker build -t ${{ secrets.REGISTRY_LOGIN_SERVER }}/$IMAGE_TAG .
           docker push ${{ secrets.REGISTRY_LOGIN_SERVER }}/$IMAGE_TAG
           echo "IMAGE_TAG=$IMAGE_TAG" >> $GITHUB_ENV
 
-      - name: Deploy to Azure Container Apps
-        run: |
-          az containerapp update \
-            --name fastapi-aca \
-            --resource-group fastapi-aca-rg \
-            --image ${{ secrets.REGISTRY_LOGIN_SERVER }}/${{ env.IMAGE_TAG }}
+      # - name: Deploy to Azure Container Apps
+      #   run: |
+      #     az containerapp update \
+      #       --name fastapi-aca \
+      #       --resource-group maersk-api \
+      #       --image ${{ secrets.REGISTRY_LOGIN_SERVER }}/${{ env.IMAGE_TAG }}
