--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -31,6 +31,6 @@ jobs:
       - name: Deploy to Azure Container Apps
         run: |
           az containerapp update \
-            --name fastapi-aca \
+            --name zemmaerskgateway \
             --resource-group maersk-api \
             --image ${{ secrets.REGISTRY_LOGIN_SERVER }}/${{ env.IMAGE_TAG }}
