--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,8 @@ fastapi = "^0.128.0"
 uvicorn = "^0.40.0"
 pydantic = "^2.0.0"
 requests = "^2.32.5"
+isort = "^7.0.0"
+black = "^26.1.0"
 
 
 [build-system]
